--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="HOSNeRF: Dynamic Human-Object-Scene Neural Radiance Fields from a Single Video">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+        content="Instant3D: Instant Text-to-3D Generation">
+  <meta name="keywords" content="NeRF, 3D, Text-to-Image Generation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>HOSNeRF: Dynamic Human-Object-Scene Neural Radiance Fields from a Single Video</title>
+  <title>Instant3D: Instant Text-to-3D Generation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -88,39 +88,36 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">HOSNeRF: Dynamic Human-Object-Scene Neural Radiance Fields from a Single Video</h1>
+          <h1 class="title is-1 publication-title">Instant3D: Instant Text-to-3D Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://jia-wei-liu.github.io/">Jia-Wei Liu</a><sup>1,2</sup>,</span>
+              <a href="https://ming1993li.github.io//">Ming Li</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://yanpei.me">Yan-Pei Cao</a><sup>2</sup>,</span>
+              <a href="https://panzhous.github.io/">Pan Zhou</a><sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://scholar.google.com.hk/citations?user=s2q3_A4AAAAJ&hl=zh-CN">Tianyuan Yang</a><sup>1</sup>,
+              <a href="https://jia-wei-liu.github.io/">Jia-Wei Liu</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=-4iADzMAAAAJ&hl=en">Eric Zhongcong Xu</a><sup>1</sup>,
+              <a href="https://www.jussikeppo.com/">Jussi Keppo</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.jussikeppo.com/">Jussi Keppo</a><sup>4,5</sup>,
+              <a href="https://scholar.google.com.sg/citations?user=BGONmkIAAAAJ&hl=en">Min Lin</a><sup>2</sup>,
             </span>
             <br>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=4oXBp9UAAAAJ&hl=en">Ying Shan</a><sup>2</sup>,
+              <a href="https://scholar.google.com.sg/citations?user=DNuiPHwAAAAJ&hl=en">Shuicheng Yan</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?hl=en&user=mk-F69UAAAAJ&view_op=list_works&sortby=pubdate">Xiaohu Qie</a><sup>3</sup>,
-            </span>            
-            <span class="author-block">
-              <a href="https://sites.google.com/view/showlab">Mike Zheng Shou</a><sup>1</sup>
-            </span>                        
+              <a href="https://scholar.google.com/citations?user=Ec5Biz4AAAAJ&hl=zh-CN">Xiangyu Xu</a><sup>4</sup>,
+            </span>                                   
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Show Lab, National University of Singapore  </span>
-            <span class="author-block"><sup>2</sup>ARC Lab,</span>
-            <span class="author-block"><sup>3</sup>Tencent PCG </span>
+            <span class="author-block"><sup>1</sup>National University of Singapore  </span>
+            <span class="author-block"><sup>2</sup>Sea AI Lab,</span>
+            <span class="author-block"><sup>3</sup>Skywork AI </span>
             <br>
-            <span class="author-block"><sup>4</sup>Business School, <sup>5</sup>Institute of Operations Research and Analytics, National University of Singapore</span>
+            <span class="author-block"><sup>4</sup>Xi'an Jiaotong University</span>
           </div>
 
           <div class="column has-text-centered">
