--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2304.12281.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -131,9 +131,9 @@
                   </span>
                   <span>Paper</span>
                 </a>
-              </span>
+              </span> -->
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2304.12281" 
+                <a href="" 
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -142,7 +142,7 @@
                 </a>
               </span>
               <!-- Video Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=wS5k5nNkPi4&t=1s"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -150,24 +150,24 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code (Coming Soon!)</span>
                   </a>
-              </span>
+              </span> -->
               <!-- Dataset Link. -->
-              <span class="link-block">
+<!--               <span class="link-block">
                 <a href="https://drive.google.com/drive/folders/1viuXcihwFpLIjl6TmLyF5VARB7GxEfEv?usp=drive_link"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
-                  <span>Data</span>
+                  <span>Data</span> -->
                   </a>
             </div>
 
