--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
-<!--               <span class="link-block">
+              <span class="link-block">
                 <a class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code (Coming Soon!)</span>
                   </a>
-              </span> -->
+              </span>
               <!-- Dataset Link. -->
 <!--               <span class="link-block">
                 <a href="https://drive.google.com/drive/folders/1viuXcihwFpLIjl6TmLyF5VARB7GxEfEv?usp=drive_link"
