--- a/index.html
+++ b/index.html
@@ -185,7 +185,6 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
-          <img class="thumbnail" src="./static/images/Teaser.png" style="width:100%; margin-bottom:20px">
           <p>
                 Text-to-3D generation, which aims to synthesize vivid
                 3D objects from text prompts, has attracted much attention
@@ -234,7 +233,7 @@
                 in one single pass of a feedforward network, taking about
                 25ms.          
           </p>
-
+          <img class="thumbnail" src="./static/images/teaser.jpg" style="width:100%; margin-bottom:20px">
         </div>
       </div>
     </div>
