--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Instant3D: Instant Text-to-3D Generation</h1>
+          <h1 class="title is-1 publication-title"><i>Instant3D</i>: Instant Text-to-3D Generation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ming1993li.github.io//">Ming Li</a><sup>1</sup>,</span>
