--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                 in one single pass of a feedforward network, taking about
                 <b>25ms</b>.          
           </p>
-          <img class="thumbnail" src="./static/images/teaser.jpg" style="width:70%; margin-bottom:20px">
         </div>
       </div>
+      <img class="thumbnail" src="./static/images/teaser.jpg" style="width:70%">
     </div>
     <!--/ Motivations -->
 
@@ -256,7 +256,7 @@
                   loss. We also present an adaptive Perp-Neg algorithm to better solve the Janus problem in our framework. During inference,
                   our Instant3D can infer a faithful 3D object from an unseen text prompt in less than one second.          
           </p>
-          <img class="thumbnail" src="./static/images/overview.jpg" style="width:70%; margin-bottom:20px">
+          <img class="thumbnail" src="./static/images/overview.jpg" style="width:100%; margin-bottom:20px">
         </div>
       </div>
     </div>
