--- a/index.html
+++ b/index.html
@@ -233,9 +233,11 @@
                 in one single pass of a feedforward network, taking about
                 <b>25ms</b>.          
           </p>
+          <div class="content has-text-centered">
+            <img src="./static/images/teaser.jpg" style="width: 65%"/>
+          </div>
         </div>
       </div>
-      <img class="thumbnail" src="./static/images/teaser.jpg" style="width:70%">
     </div>
     <!--/ Motivations -->
 
