--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 </section>
 
 
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{liu2023hosnerf,
@@ -290,7 +290,7 @@
   year      = {2023},
 }</code></pre>
   </div>
-</section>
+</section> -->
 
 
 <footer class="footer">
