--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
 <footer class="footer">
   <div class="container">
-    <div class="content has-text-centered">
+<!--     <div class="content has-text-centered">
       <a class="icon-link"
          href="https://arxiv.org/pdf/2304.12281.pdf">
         <i class="fas fa-file-pdf"></i>
@@ -303,7 +303,7 @@
       <a class="icon-link" href="https://showlab.github.io/HOSNeRF" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
-    </div>
+    </div> -->
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="content">
