--- a/index.html
+++ b/index.html
@@ -268,13 +268,20 @@
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
+        <h2 class="title is-3">Our Generated Objects on Animals</h2>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/wS5k5nNkPi4"
+          <iframe src="./static/videos/animals1.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="publication-video">
+          <iframe src="./static/videos/animals2.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
+
+
+    
     <!--/ Paper video. -->
   </div>
 </section>
