--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Our Generated Objects on Animals</h2>
+        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward on Animals</h2>
         <div class="publication-video">
           <iframe src="./static/videos/animals1.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -280,7 +280,33 @@
       </div>
     </div>
 
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward on Portraits</h2>
+        <div class="publication-video">
+          <iframe src="./static/videos/portraits1.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="publication-video">
+          <iframe src="./static/videos/portraits2.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
 
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward on Daily Life</h2>
+        <div class="publication-video">
+          <iframe src="./static/videos/daily_life1.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="publication-video">
+          <iframe src="./static/videos/daily_life2.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
     
     <!--/ Paper video. -->
   </div>
