--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <a href="https://scholar.google.com.sg/citations?user=DNuiPHwAAAAJ&hl=en">Shuicheng Yan</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://scholar.google.com/citations?user=Ec5Biz4AAAAJ&hl=zh-CN">Xiangyu Xu</a><sup>4</sup>,
+              <a href="https://scholar.google.com/citations?user=Ec5Biz4AAAAJ&hl=zh-CN">Xiangyu Xu</a><sup>4</sup>.
             </span>                                   
           </div>
 
