--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>National University of Singapore  </span>
-            <span class="author-block"><sup>2</sup>Sea AI Lab,</span>
+            <span class="author-block"><sup>2</sup>Sea AI Lab</span>
             <span class="author-block"><sup>3</sup>Skywork AI </span>
             <br>
             <span class="author-block"><sup>4</sup>Xi'an Jiaotong University</span>
