--- a/index.html
+++ b/index.html
@@ -270,12 +270,10 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward on Animals</h2>
         <div class="publication-video">
-          <iframe src="./static/videos/animals1.mp4"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe src="./static/videos/animals1.mp4" style="width:50%" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div class="publication-video">
-          <iframe src="./static/videos/animals2.mp4"
-                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe src="./static/videos/animals2.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
