--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <iframe src="./static/videos/animals1.mp4" style="width:50%" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div class="publication-video">
-          <iframe src="./static/videos/animals2.mp4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <iframe src="./static/videos/animals2.mp4" style="width:50%" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
     </div>
