--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward</h2>
+        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         <div class="publication-video">
           <iframe src="./static/videos/animals1.mp4" style="width:100%" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
