--- a/index.html
+++ b/index.html
@@ -272,12 +272,13 @@
     <!-- Paper video. -->
   <hr class="divider" />
     <div class="container" style="max-width: 768px;">
-        <div class="row">
+<!--         <div class="row">
             <div class="col-sm-12">
                 <h2>Example generated objects</h2>
                 <p>MVDream generates objects and scenes in a multi-view consistent way.</p>
             </div>
-        </div>
+        </div> -->
+        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         <div class="row captioned_videos">
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
