--- a/index.html
+++ b/index.html
@@ -272,13 +272,9 @@
     <!-- Paper video. -->
   <hr class="divider" />
     <div class="container" style="max-width: 768px;">
-<!--         <div class="row">
-            <div class="col-sm-12">
-                <h2>Example generated objects</h2>
-                <p>MVDream generates objects and scenes in a multi-view consistent way.</p>
-            </div>
-        </div> -->
-        <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
+        <div class="columns is-centered has-text-centered">
+          <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
+        </div>
         <div class="row captioned_videos">
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
@@ -298,7 +294,6 @@
                 </div>
                 <h6 class="caption">a boy wearing a peaked cap is angry</h6>
             </div>
-
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
                     <video class="video lazy" id="ex3" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
@@ -309,7 +304,7 @@
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
             </div>
         </div>
-        </div>
+      </div>
     </div>
     
     <!--/ Paper video. -->
