--- a/index.html
+++ b/index.html
@@ -276,6 +276,15 @@
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         </div>
         <div class="row captioned_videos">
+              <div class="col-4">
+                <div class="video-compare-container" style="width: 100%">
+                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
+                        <source data-src="./static/videos/testing.mp4" type="video/mp4"></source>
+                    </video>
+                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
+                </div>
+                <h6 class="caption">testing</h6>
+            </div>
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
                     <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
