--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=Ec5Biz4AAAAJ&hl=zh-CN">Xiangyu Xu</a><sup>*4</sup>.
-            </span>                                   
+            </span>
           </div>
 
           <div class="is-size-5 publication-authors">
@@ -119,7 +119,7 @@
             <br>
             <span class="author-block"><sup>4</sup>Xi'an Jiaotong University</span>
           </div>
-          
+
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>*</sup>Corresponding Author</span>
           </div>
@@ -137,7 +137,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="" 
+                <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -235,7 +235,7 @@
                 computational cost and has strong generalization ability on
                 new prompts. It is able to generate a conditional 3D representation (triplane) of a 3D object for an unseen text prompt
                 in one single pass of a feedforward network, taking about
-                <b>25ms</b>.          
+                <b>25ms</b>.
           </p>
           <div class="content has-text-centered">
             <img src="./static/images/teaser.jpg" style="width: 65%"/>
@@ -260,14 +260,14 @@
                   effectively accelerating the training convergence. During training, the view image is first diffused by adding random noise
                   and then fed into a pretrained UNet conditioned on the text prompt for denoising, which provides the gradient of the SDS
                   loss. We also present an adaptive Perp-Neg algorithm to better solve the Janus problem in our framework. During inference,
-                  our Instant3D can infer a faithful 3D object from an unseen text prompt in less than one second.          
+                  our Instant3D can infer a faithful 3D object from an unseen text prompt in less than one second.
           </p>
           <img class="thumbnail" src="./static/images/overview.jpg" style="width:100%; margin-bottom:20px">
         </div>
       </div>
     </div>
     <!--/ Method -->
-    
+
 
     <!-- Paper video. -->
     <hr class="divider" />
@@ -313,15 +313,16 @@
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
             </div>
         </div>
-      </div>
+    </div>
     <!--/ Paper video. -->
-
+  </div>
+</section>  
 <!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{liu2023hosnerf,
   title     = {HOSNeRF: Dynamic Human-Object-Scene Neural Radiance Fields from a Single Video},
-  author    = {Liu, Jia-Wei and Cao, Yan-Pei and Yang, Tianyuan and Xu, Eric Zhongcong and Keppo, Jussi and Shan, Ying and Qie, Xiaohu and Shou, Mike Zheng},  
+  author    = {Liu, Jia-Wei and Cao, Yan-Pei and Yang, Tianyuan and Xu, Eric Zhongcong and Keppo, Jussi and Shan, Ying and Qie, Xiaohu and Shou, Mike Zheng},
   journal   = {arXiv preprint arXiv:2304.12281},
   year      = {2023},
 }</code></pre>
