--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
 
     <!-- Paper video. -->
-    <hr class="divider" />
+<!--    <hr class="divider" />-->
     <div class="container" style="max-width: 768px;">
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
