--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
                     <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
-                        <source data-src="static/videos/testing.mp4" type="video/mp4"></source>
+                        <source src="./static/videos/testing.mp4" type="video/mp4"></source>
                     </video>
                     <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
                 </div>
