--- a/index.html
+++ b/index.html
@@ -313,8 +313,11 @@
         <div class="row captioned_videos">
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
-                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
-                        <source src="./static/videos/testing.mp4" type="video/mp4"></source>
+<!--                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">-->
+<!--                        <source src="./static/videos/testing.mp4" type="video/mp4"></source>-->
+<!--                    </video>-->
+                    <video controls="" loop="" width="100%">
+                        <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
                     <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
                 </div>
