--- a/index.html
+++ b/index.html
@@ -270,41 +270,6 @@
 
 
     <!-- Paper video. -->
-<!--    <hr class="divider" />-->
-<!--    <div class="container" style="max-width: 768px;">-->
-<!--        <div class="columns is-centered has-text-centered">-->
-<!--          <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>-->
-<!--        </div>-->
-<!--        <div class="row captioned_videos">-->
-<!--            <div class="col-4">-->
-<!--                <div class="video-compare-container" style="width: 100%">-->
-<!--                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">-->
-<!--                        <source data-src="./static/videos/testing.mp4" type="video/mp4"></source>-->
-<!--                    </video>-->
-<!--                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>-->
-<!--                </div>-->
-<!--                <h6 class="caption">testing</h6>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <div class="video-compare-container" style="width: 100%">-->
-<!--                    <video class="video lazy" id="ex2" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">-->
-<!--                        <source data-src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4"></source>-->
-<!--                    </video>-->
-<!--                    <canvas height="752" class="videoMerge" id="ex2Merge" width="1002"></canvas>-->
-<!--                </div>-->
-<!--                <h6 class="caption">a boy wearing a peaked cap is angry</h6>-->
-<!--            </div>-->
-<!--            <div class="col-4">-->
-<!--                <div class="video-compare-container" style="width: 100%">-->
-<!--                    <video class="video lazy" id="ex3" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">-->
-<!--                        <source data-src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4"></source>-->
-<!--                    </video>-->
-<!--                    <canvas height="752" class="videoMerge" id="ex3Merge" width="1002"></canvas>-->
-<!--                </div>-->
-<!--                <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
       <hr class="divider" />
       <div class="container" style="max-width: 768px;">
         <div class="columns is-centered has-text-centered">
@@ -313,12 +278,12 @@
         <div class="row captioned_videos">
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
-<!--                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">-->
-<!--                        <source src="./static/videos/testing.mp4" type="video/mp4"></source>-->
-<!--                    </video>-->
-                    <video controls="" loop="" width="100%">
+                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
+<!--                    <video controls="" loop="" width="100%">-->
+<!--                        <source src="./static/videos/testing.mp4" type="video/mp4">-->
+<!--                    </video>-->
                     <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
                 </div>
                 <h6 class="caption">testing</h6>
