--- a/index.html
+++ b/index.html
@@ -278,12 +278,27 @@
         <div class="row captioned_videos">
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
-                    <video class="video lazy" id="ex1" loop playsinline autoplay muted onplay="resizeAndPlay(this)" style="height: 0px;">
+                    <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
-<!--                    <video controls="" loop="" width="100%">-->
-<!--                        <source src="./static/videos/testing.mp4" type="video/mp4">-->
-<!--                    </video>-->
+                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
+                </div>
+                <h6 class="caption">testing</h6>
+            </div>
+            <div class="col-4">
+                <div class="video-compare-container" style="width: 100%">
+                    <video controls="" loop="" width="30%" height="60%">
+                        <source src="./static/videos/testing.mp4" type="video/mp4">
+                    </video>
+                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
+                </div>
+                <h6 class="caption">testing</h6>
+            </div>
+            <div class="col-4">
+                <div class="video-compare-container" style="width: 100%">
+                    <video controls="" loop="" width="30%" height="60%">
+                        <source src="./static/videos/testing.mp4" type="video/mp4">
+                    </video>
                     <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
                 </div>
                 <h6 class="caption">testing</h6>
