--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
-                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
+<!--                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>-->
                 </div>
                 <h6 class="caption">testing</h6>
             </div>
@@ -290,7 +290,7 @@
                     <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
-                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
+<!--                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>-->
                 </div>
                 <h6 class="caption">testing</h6>
             </div>
@@ -299,7 +299,7 @@
                     <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
-                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>
+<!--                    <canvas height="752" class="videoMerge" id="ex1Merge" width="1002"></canvas>-->
                 </div>
                 <h6 class="caption">testing</h6>
             </div>
