--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         </div>
-        <div class="row captioned_videos">
+        <div class="columns captioned_videos">
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
-                    <video controls="" loop="" width="20%" height="60%">
+                    <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -286,7 +286,7 @@
             </div>
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
-                    <video controls="" loop="" width="20%" height="60%">
+                    <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -294,7 +294,7 @@
             </div>
             <div class="col-4">
                 <div class="video-compare-container" style="width: 100%">
-                    <video controls="" loop="" width="20%" height="60%">
+                    <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
                     </video>
                 </div>
