--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         </div>
         <div class="columns captioned_videos">
-            <div class="col-4">
+            <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
                     <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
@@ -284,7 +284,7 @@
                 </div>
                 <h6 class="caption">testing</h6>
             </div>
-            <div class="col-4">
+            <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
                     <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
@@ -292,7 +292,7 @@
                 </div>
                 <h6 class="caption">testing</h6>
             </div>
-            <div class="col-4">
+            <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
                     <video controls="" loop="" width="30%" height="60%">
                         <source src="./static/videos/testing.mp4" type="video/mp4">
