--- a/index.html
+++ b/index.html
@@ -279,26 +279,26 @@
             <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
                     <video controls="" loop="" width="100%" height="60%">
-                        <source src="./static/videos/testing.mp4" type="video/mp4">
+                        <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                     </video>
                 </div>
-                <h6 class="caption">testing</h6>
+                <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
             </div>
             <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
                     <video controls="" loop="" width="100%" height="60%">
-                        <source src="./static/videos/testing.mp4" type="video/mp4">
+                        <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                     </video>
                 </div>
-                <h6 class="caption">testing</h6>
+                <h6 class="caption">a boy wearing a peaked cap is angry</h6>
             </div>
             <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
                     <video controls="" loop="" width="100%" height="60%">
-                        <source src="./static/videos/testing.mp4" type="video/mp4">
+                        <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                     </video>
                 </div>
-                <h6 class="caption">testing</h6>
+                <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
             </div>
         </div>
       </div>
