--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
     <!--/ Abstract -->
 
     <!-- Motivations -->
+      <hr class="divider" />
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Motivations</h2>
@@ -247,6 +248,7 @@
 
 
     <!-- Method -->
+      <hr class="divider" />
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
@@ -278,7 +280,7 @@
         <div class="columns captioned_videos">
             <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
-                    <video controls="" loop="" width="100%" height="60%">
+                    <video controls="" loop="" width="100%" height="500px">
                         <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -286,7 +288,7 @@
             </div>
             <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
-                    <video controls="" loop="" width="100%" height="60%">
+                    <video controls="" loop="" width="100%" height="500px">
                         <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -294,7 +296,7 @@
             </div>
             <div class="column is-one-third">
                 <div class="video-compare-container" style="width: 100%">
-                    <video controls="" loop="" width="100%" height="60%">
+                    <video controls="" loop="" width="100%" height="500px">
                         <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                     </video>
                 </div>
