--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@
         </div>
         <div class="columns captioned_videos">
             <div class="column is-one-third">
-                <div class="video-compare-container" style="width: 250px; height: 300px">
-                    <video controls="" loop="" width="100%">
+<!--                <div class="video-compare-container" style="width: 250px; height: 300px">-->
+                <div class="video-compare-container">
+                    <video controls="" loop="" width="250" height="300">
                         <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                     </video>
                 </div>
