--- a/index.html
+++ b/index.html
@@ -281,23 +281,23 @@
             <div class="column is-one-third">
 <!--                <div class="video-compare-container" style="width: 250px; height: 300px">-->
                 <div class="video-compare-container">
-                    <video controls="" loop="" width="250" height="300">
+                    <video controls="" loop="" width="300" height="360">
                         <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                     </video>
                 </div>
                 <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
             </div>
             <div class="column is-one-third">
-                <div class="video-compare-container" style="width: 250px; height: 300px">
-                    <video controls="" loop="" width="100%">
+                <div class="video-compare-container">
+                    <video controls="" loop="" width="300" height="360">
                         <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                     </video>
                 </div>
                 <h6 class="caption">a boy wearing a peaked cap is angry</h6>
             </div>
             <div class="column is-one-third">
-                <div class="video-compare-container" style="width: 250px; height: 300px">
-                    <video controls="" loop="" width="100%">
+                <div class="video-compare-container">
+                    <video controls="" loop="" width="300" height="360">
                         <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                     </video>
                 </div>
