--- a/index.html
+++ b/index.html
@@ -279,9 +279,8 @@
         </div>
         <div class="columns captioned_videos">
             <div class="column is-one-third">
-<!--                <div class="video-compare-container" style="width: 250px; height: 300px">-->
                 <div class="video-compare-container">
-                    <video controls="" loop="" width="300" height="360">
+                    <video controls="" loop="" width="300px" height="360px">
                         <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -289,7 +288,7 @@
             </div>
             <div class="column is-one-third">
                 <div class="video-compare-container">
-                    <video controls="" loop="" width="300" height="360">
+                    <video controls="" loop="" width="300px" height="360px">
                         <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                     </video>
                 </div>
@@ -297,7 +296,7 @@
             </div>
             <div class="column is-one-third">
                 <div class="video-compare-container">
-                    <video controls="" loop="" width="300" height="360">
+                    <video controls="" loop="" width="300px" height="360px">
                         <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                     </video>
                 </div>
