--- a/index.html
+++ b/index.html
@@ -279,27 +279,27 @@
         </div>
         <div class="columns captioned_videos">
             <div class="column is-one-third">
-                <div class="video-compare-container">
-                    <video controls="" loop="" width="300px" height="360px">
-                        <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
-                    </video>
-                </div>
+<!--                <div class="video-compare-container">-->
+                <video controls="" loop="" width="300px" height="360px">
+                    <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
+                </video>
+<!--                </div>-->
                 <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
             </div>
             <div class="column is-one-third">
-                <div class="video-compare-container">
-                    <video controls="" loop="" width="300px" height="360px">
-                        <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
-                    </video>
-                </div>
+<!--                <div class="video-compare-container">-->
+                <video controls="" loop="" width="300px" height="360px">
+                    <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
+                </video>
+<!--                </div>-->
                 <h6 class="caption">a boy wearing a peaked cap is angry</h6>
             </div>
             <div class="column is-one-third">
-                <div class="video-compare-container">
-                    <video controls="" loop="" width="300px" height="360px">
-                        <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
-                    </video>
-                </div>
+<!--                <div class="video-compare-container">-->
+                <video controls="" loop="" width="300px" height="360px">
+                    <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
+                </video>
+<!--                </div>-->
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
             </div>
         </div>
