--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
         <div class="columns captioned_videos">
             <div class="column is-one-third">
 <!--                <div class="video-compare-container">-->
-                <video controls="" loop="" width="300px" height="360px">
+<!--                <video controls="" loop="" width="300px" height="360px">-->
+                <video controls="" loop="" height="360px">
                     <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                 </video>
 <!--                </div>-->
@@ -288,7 +289,7 @@
             </div>
             <div class="column is-one-third">
 <!--                <div class="video-compare-container">-->
-                <video controls="" loop="" width="300px" height="360px">
+                <video controls="" loop="" height="360px">
                     <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                 </video>
 <!--                </div>-->
@@ -296,7 +297,7 @@
             </div>
             <div class="column is-one-third">
 <!--                <div class="video-compare-container">-->
-                <video controls="" loop="" width="300px" height="360px">
+                <video controls="" loop="" height="360px">
                     <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                 </video>
 <!--                </div>-->
