--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
         </div>
         <div class="columns captioned_videos">
 <!--            <div class="column is-one-third">-->
+            <div class="column">
 <!--                <div class="video-compare-container">-->
 <!--                <video controls="" loop="" width="300px" height="360px">-->
                 <video controls="" loop="" width="300px" height="360px">
@@ -286,23 +287,25 @@
                 </video>
 <!--                </div>-->
                 <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
-<!--            </div>-->
+            </div>
 <!--            <div class="column is-one-third">-->
+            <div class="column">
 <!--                <div class="video-compare-container">-->
                 <video controls="" loop="" width="300px" height="360px">
                     <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                 </video>
 <!--                </div>-->
                 <h6 class="caption">a boy wearing a peaked cap is angry</h6>
-<!--            </div>-->
+            </div>
 <!--            <div class="column is-one-third">-->
+            <div class="column">
 <!--                <div class="video-compare-container">-->
                 <video controls="" loop="" width="300px" height="360px">
                     <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                 </video>
 <!--                </div>-->
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
-<!--            </div>-->
+           </div>
         </div>
       </div>
     <!--/ Paper video. -->
