--- a/index.html
+++ b/index.html
@@ -273,26 +273,27 @@
 
     <!-- Paper video. -->
       <hr class="divider" />
-      <div class="container" style="max-width: 360px;">
-<!--      <div class="container">-->
+<!--      <div class="container" style="max-width: 360px;">-->
+      <div class="container">
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         </div>
         <div class="columns captioned_videos">
             <div class="column">
-                <video controls="" loop="" width="300px" height="360px">
+<!--                <video controls="" loop="" width="300px" height="360px">-->
+                <video controls="" loop="" height="360px">
                     <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" width="300px" height="360px">
+                <video controls="" loop="" height="360px">
                     <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a boy wearing a peaked cap is angry</h6>
             </div>
             <div class="column">
-                <video controls="" loop="" width="300px" height="360px">
+                <video controls="" loop="" height="360px">
                     <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
                 </video>
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
