--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
 
     <!-- Paper video. -->
       <hr class="divider" />
-<!--      <div class="container" style="max-width: 360px;">-->
-      <div class="container">
+      <div class="container" style="max-width: 500px;">
         <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
         </div>
