--- a/index.html
+++ b/index.html
@@ -303,31 +303,31 @@
                 <h6 class="caption">a koala sitting on a stone and wearing a cape and wearing a cowboy hat</h6>
            </div>
         </div>
-        <canvas height="252" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a black man wearing a peaked cap is laughing.mp4" type="video/mp4">
+                    <source src="./static/videos/a man wearing a suit is working on a laptop.mp4" type="video/mp4">
                 </video>
-                <h6 class="caption">a black man wearing a peaked cap is laughing</h6>
+                <h6 class="caption">a man wearing a suit is working on a laptop</h6>
             </div>
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a boy wearing a peaked cap is angry.mp4" type="video/mp4">
+                    <source src="./static/videos/a muscular man is exercising in a fitness room.mp4" type="video/mp4">
                 </video>
-                <h6 class="caption">a boy wearing a peaked cap is angry</h6>
+                <h6 class="caption">a muscular man is exercising in a fitness room</h6>
             </div>
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a dog wearing a tie  and wearing a party hat.mp4" type="video/mp4">
+                    <source src="./static/videos/a panda sitting in a basket and wearing a straw hat.mp4" type="video/mp4">
                 </video>
-                <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
+                <h6 class="caption">a panda sitting in a basket and wearing a straw hat</h6>
            </div>
            <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
-                    <source src="./static/videos/a koala sitting on a stone and wearing a cape and wearing a cowboy hat.mp4" type="video/mp4">
+                    <source src="./static/videos/a panda sitting in a bathtub and wearing a beanie.mp4" type="video/mp4">
                 </video>
-                <h6 class="caption">a koala sitting on a stone and wearing a cape and wearing a cowboy hat</h6>
+                <h6 class="caption">a panda sitting in a bathtub and wearing a beanie</h6>
            </div>
         </div>
 
