--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
 
     <!-- Method -->
-      <hr class="divider" />
+    <hr class="divider" />
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
@@ -330,7 +330,33 @@
                 <h6 class="caption">a panda sitting in a bathtub and wearing a beanie</h6>
            </div>
         </div>
-
+        <canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+        <div class="columns captioned_videos">
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a pregnant woman wearing a dress is shopping.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a pregnant woman wearing a dress is shopping</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a rabbit sitting on a stone and wearing a tie.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a rabbit sitting on a stone and wearing a tie</h6>
+            </div>
+            <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a teddy bear sitting on a stone and wearing a scarf  and wearing a flat cap.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a teddy bear sitting on a stone and wearing a scarf  and wearing a flat cap</h6>
+           </div>
+           <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a teddy bear sitting on books and wearing a scarf  and wearing a flat cap.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a teddy bear sitting on books and wearing a scarf  and wearing a flat cap</h6>
+           </div>
+        </div>
       </div>
     <!--/ Paper video. -->
   </div>
@@ -347,7 +373,8 @@
   </div>
 </section> -->
 
-
+<canvas height="125" class="videoMerge" id="ex2Merge" width="1002"></canvas>
+<hr class="divider" />
 <footer class="footer">
   <div class="container">
 <!--     <div class="content has-text-centered">
